Refactored API and restructured the project.

--- a/Fron.Tests/Fron.Tests.fsproj
+++ b/Fron.Tests/Fron.Tests.fsproj
@@ -23,7 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Include="FronTests.fs" />
+      <Compile Include="ApiTests.fs" />
     </ItemGroup>
 
     <ItemGroup>
